# GRNN

./: .python-version  pyproject.toml
GRNN/: GRNN.py  README.md  __init__.py  utils.py
examples/: exp_iris.py
tests/: test_grnn.py
