[tool.poetry]
name = "grnn"
version = "0.1.0"
description = ""
authors = ["mei <mei28aquarius@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pytest = "^6.2.2"
pysen = "^0.9.1"
isort = "^5.8.0"
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"
sklearn = "^0.0"
pandas = "^1.2.3"
matplotlib = "^3.4.0"
seaborn = "^0.11.1"
icecream = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"
 
[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false

[[tool.pysen.lint.mypy_targets]]
paths = ["."]

